--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,5 +28,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/
+    - assets/images/logo.png
     - assets/icons/
